--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <!--HEADER-SECTION-->
+	<!--
     <section class="header-section">
       <div class="header-container">
         <div class="header-row">
@@ -34,12 +35,12 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
     <!--HOME-SECTION-->
     <section id="home" class="home-section section margin">
       <div class="home-container">
         <div class="home-row">
-          <div class="home-col">
+          <div class="home-col order">
             <div class="home-heading">
               <h1 class="home-head">Grow your business with Vesperr</h1>
               <p class="home-para">We are team of talented designers making websites with Bootstrap</p>
@@ -120,12 +121,12 @@
     <section class="about1-section margin">
       <div class="about1-container">
         <div class="about1-row">
-          <div class="about1-col">
+          <div class="about1-column1">
             <div class="about1-img">
-              <img class="about1-img" src="img/image7.svg">
+              <img class="about1-image" src="img/image7.svg">
             </div>
           </div>
-          <div class="about1-col">
+          <div class="about1-column2">
             <div class="about1-row1">
               <div class="about1-col1">
                 <div class="about1-icon">
@@ -231,7 +232,7 @@
         </div>
       </div>
     </section>
-    <section class="service1-section">
+    <section class="service1-section margin section">
       <div class="service1-container">
         <div class="service1-row">
           <div class="service1-col">
@@ -374,7 +375,7 @@
             </div>
           </div>
           <div class="feature-col">
-            <div class="feature-card">
+            <div class="feature-card"> 
               <div class="feature-icon">
                 <iconify-icon icon="ri:file-list-3-line"></iconify-icon>
               </div>
@@ -915,48 +916,82 @@
           <h1 class="faq-head">FREQUENTLY ASKED QUESTIONS</h1>
         </div>
         <div class="faq-row">
+		
           <div class="faq-col1">
-            <div class="faq-hp">
+            <div class="faq-card">		  
               <div class="icon-flex">
                 <div class="faq-icon">
                   <iconify-icon icon="mdi:question-mark-circle-outline"></iconify-icon>
                 </div>
                 <h3 class="faq-head1">Non consectetur a erat nam at lectus urna duis?</h3>
-              </div>
+		      </div>
+			</div>
+		  </div>
+		  <div class="faq-col2">
+			<div class="faq-hp1">
+              <p class="faq-para">Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
+            </div>
+		  </div>
+		  <div class="faq-col1">
+		    <div class="faq-card">	
               <div class="icon-flex">
                 <div class="faq-icon">
                   <iconify-icon icon="mdi:question-mark-circle-outline"></iconify-icon>
                 </div>
                 <h3 class="faq-head1">Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?</h3>
               </div>
+			</div>
+		  </div>
+		  <div class="faq-col2">
+		    <div class="faq-hp1">
+			  <p class="faq-para">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.</p>
+			</div>
+		  </div>
+		  <div class="faq-col1">
+		    <div class="faq-card">	
               <div class="icon-flex">
                 <div class="faq-icon">
                   <iconify-icon icon="mdi:question-mark-circle-outline"></iconify-icon>
                 </div>
                 <h3 class="faq-head1">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?</h3>
               </div>
+			</div>
+		  </div>
+		  <div class="faq-col2">
+		    <div class="faq-hp1">
+			    <p class="faq-para">Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus.</p>
+		     </div>
+          </div>
+          <div class="faq-col1">
+            <div class="faq-card">			  
               <div class="icon-flex">
                 <div class="faq-icon">
                   <iconify-icon icon="mdi:question-mark-circle-outline"></iconify-icon>
                 </div>
                 <h3 class="faq-head1">Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?</h3>
               </div>
-              <div class="icon-flex1">
+			</div>
+		  </div>
+		  <div class="faq-col2">
+		    <div class="faq-hp1">
+			  <p class="faq-para">Aperiam itaque sit optio et deleniti eos nihil quidem cumque. Voluptas dolorum accusantium sunt sit enim. Provident consequuntur quam aut reiciendis qui rerum dolorem sit odio. Repellat assumenda soluta sunt pariatur error doloribus fuga.</p>
+			</div>
+		  </div>
+		  <div class="faq-col1">
+		    <div class="faq-card">	
+              <div class="icon-flex">
                 <div class="faq-icon">
                   <iconify-icon icon="mdi:question-mark-circle-outline"></iconify-icon>
                 </div>
                 <h3 class="faq-head1">Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</h3>
               </div>
+			</div>
+		  </div>
+          <div class="faq-col2"> 
+            <div class="faq-hp1">		  
+               <p class="faq-para1">Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in</p>
             </div>
-          </div>
-          <div class="faq-col2">
-            <div class="faq-hp1">
-              <p class="faq-para">Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
-              <p class="faq-para">Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim.</p>
-              <p class="faq-para">Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus.</p>
-              <p class="faq-para">Aperiam itaque sit optio et deleniti eos nihil quidem cumque. Voluptas dolorum accusantium sunt sit enim. Provident consequuntur quam aut reiciendis qui rerum dolorem sit odio. Repellat assumenda soluta sunt pariatur error doloribus fuga.</p>
-              <p class="faq-para1">Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in</p>
-            </div>
+		  </div>
           </div>
         </div>
       </div>
